--- a/style.css
+++ b/style.css
@@ -1,24 +1,39 @@
+
 body {
-    font-family: 'Times New Roman', Times, serif;
+    max-width: 70ch;
+    padding: 0 1rem;
     margin: auto;
-    padding: 2em;
-    max-width: 800px;
-    display: 
-    font-size: 12pt;
-    font-weight: lighter;
+    background: var(--b-bg-1);
+    font-family: var(--b-font-main);
+    text-rendering: optimizeSpeed;
+    line-height: 1.5;
+    color: var(--b-txt);
+    -moz-tab-size: 4;
+    tab-size: 4;
+    word-break: break-word;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-text-size-adjust: 100%;
 }
 
 div#left-column {
     flex: 1 1 500px;
     text-align: left;
     padding: 1em;
+    line-height: 1.5em;
 }
 
 div#right-column {
     flex: 1 1 500px;
     text-align: right;
-    border-left: black solid 2px;
     padding: 1em;
+    line-height: 1.5em;
+    border-left: black solid 2px;
+}
+
+h2 {
+    border-bottom: black solid 1.5px;
+    margin: 1rem 0;
+    padding-bottom: 1rem;
 }
 
 ul {
